# csvconv

./: SPEC.md  package-lock.json  package.json
.github/workflows/: android.yml  release.yml  windows.yml
prototype/: pipeline-debugger.html
scripts/: fetch-pdfium.ps1
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  commands.rs  keychain.rs  lib.rs  main.rs  pdf.rs  schema_store.rs  settings.rs  triage.rs
src/components/: FailedPageModal.tsx  History.tsx  NewConversion.tsx  PipelineDebugger.tsx  Placeholder.tsx  ReviewTable.tsx  SchemaEditor.tsx  Settings.tsx
src/lib/: cost.ts  export.ts  modelClient.ts  models.ts  orchestrator.ts  pdfApi.ts  pipelineTrace.ts  queues.ts  resume.ts  schemaStorage.ts  settings.ts  sqliteCache.ts  updates.ts
src/pipelines/: autoSplit.ts  compare.ts  conversionInventory.ts  detector.ts  documentAnalyzer.ts  merge.ts  prompts.ts  runPipeline.ts  sections.ts  solver.ts  validator.ts
src/pipelines/extractors/: answerFill.ts  convertToMcq.ts  flashcard.ts  mcq_answerKeyAtEnd.ts  mcq_inlineMarked.ts  mcq_writtenAnswer.ts  qaPair.ts  schemaBuilders.ts  types.ts
src/schema/: contentTypes.ts  hash.ts  presets.ts  types.ts
