[package]
name = "csvconv"
version = "0.1.0"
description = "PDF → structured CSV via Google AI Studio (Gemini/Gemma)"
authors = ["csvconv"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "csvconv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdfium-render = { version = "0.8", features = ["thread_safe", "image"] }
rusqlite = { version = "0.32", features = ["bundled"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
imageproc = "0.25"
sha2 = "0.10"
anyhow = "1"
thiserror = "1"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }

